--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
         /*--banner--*/
         
-        .header {
+        .banner {
             background-color: #000;
             width: 100%;
             background-size: cover;
